<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/padding_small"
    android:paddingVertical="@dimen/padding_small">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_saved_articles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/saved_articles"
        android:textAppearance="@style/Button"
        android:textColor="@color/textOverlay"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/txt_profile"
        app:layout_constraintTop_toBottomOf="@+id/btn_signout" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_profile"
        android:textAppearance="@style/Headline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/sign_in"
        android:textAppearance="@style/Button"
        android:textColor="@color/textOverlay"
        app:layout_constraintStart_toStartOf="@+id/txt_profile"
        app:layout_constraintTop_toBottomOf="@+id/txt_profile" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/colorSurface"
        android:text="@string/register"
        android:textAppearance="@style/Button"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toEndOf="@+id/btn_signin"
        app:layout_constraintTop_toTopOf="@+id/btn_signin" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/sign_out"
        android:textAppearance="@style/Button"
        android:textColor="@color/textOverlay"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/txt_profile"
        app:layout_constraintTop_toBottomOf="@+id/txt_profile" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_preferences"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/preferences"
        android:textAppearance="@style/Button"
        android:textColor="@color/textOverlay"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/btn_saved_articles"
        app:layout_constraintTop_toBottomOf="@+id/btn_saved_articles" />

</androidx.constraintlayout.widget.ConstraintLayout>