<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/padding_small"
    android:paddingVertical="@dimen/padding_small">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_settings"
        android:textAppearance="@style/Headline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/about"
        android:textAppearance="@style/Button"
        android:textColor="@color/textOverlay"
        app:layout_constraintStart_toStartOf="@+id/txt_about"
        app:layout_constraintTop_toBottomOf="@+id/txt_about" />

    <TextView
        android:id="@+id/txt_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/info"
        android:textAppearance="@style/Subtitle1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_settings" />
</androidx.constraintlayout.widget.ConstraintLayout>